--- a/ChrNagad.css
+++ b/ChrNagad.css
@@ -193,9 +193,12 @@ h1 {
   display: flex;
   flex-direction: column;
 }
-.enTete {
-  padding: 0.25rem 0rem 0.25rem 0rem;
+.sousTitre {
+  margin: 0rem;
   font-size: 1.5rem;
+  text-align: center;
+  background-color: rgb(25, 8, 35);
+  color: whitesmoke;
 }
 .site {
   width: 100%;
