freeze V4 non responsive

--- a/ChrNagad.css
+++ b/ChrNagad.css
@@ -5,6 +5,7 @@ html {
 body {
   color: whitesmoke;
   background-color: rgb(25, 8, 35);
+  margin: auto;
 }
 /*---------------- boutons de bas de page ---------------*/
 
