--- a/ChrNagad.css
+++ b/ChrNagad.css
@@ -72,10 +72,15 @@ body {
   min-width: 60%;
   margin: 0rem;
 }
+@media screen and (max-width: 700px) {      /* le texte placé sous la photo */
+  #hautPage1 {
+      flex-direction: column;
+  }}
 .titre h2 {
   font-size: 1.5rem;
   padding: 14rem 0rem 0rem 0rem;
 }
+
 h1 {
   font-size: 3rem;
   padding: 0rem 0rem 0rem 0rem;
@@ -108,7 +113,7 @@ h1 {
 #html {
   position: absolute;
   top: 67rem;
-  left: 25rem;
+  left: 23.5rem;
   width: 5rem;
 }
 #html:hover {
@@ -117,7 +122,7 @@ h1 {
 #css {
   position: absolute;
   top: 61rem;
-  left: 30rem;
+  left: 29rem;
   width: 5rem;
   transition: width 2s;
 }
@@ -127,7 +132,7 @@ h1 {
 #js {
   position: absolute;
   top: 56rem;
-  left: 35rem;
+  left: 34.5rem;
   width: 5rem;
   transition: all .2s ease-in-out;
 }
@@ -254,6 +259,11 @@ button img {
   margin: 3rem 0rem 0rem 0rem;
   padding: 6px;
 }
+
+@media screen and (max-width: 700px) { /* le formulaire sous la photo et les coord. */
+  #hautPage4 {
+      flex-direction: column;
+  }}
 #partieGauche {
   display: flex;
   flex-direction: column;
