--- a/ChrNagad.css
+++ b/ChrNagad.css
@@ -144,12 +144,18 @@ h1 {
   flex-direction: row;
   width: 92% ;
 }
+
 #formation {
     font-size: 2rem;
-    padding: 20rem 0rem 0rem 42.5rem ;
+    padding: 16.75rem 0rem 0rem 42.5rem ;
     margin: 0rem;
-  }
-  #certif {
+  } 
+#stage {
+  font-size: 2rem;
+  padding: 0rem 0rem 0rem 42.5rem ;
+  margin: 0rem;
+}
+#certif {
     font-size: 1.5rem;
     color: #0080FF;
     margin: 0rem;
@@ -205,17 +211,6 @@ h1 {
 #materialize:hover {
   transform: skew(20deg, 20deg);
 }
-#react {
-  position: absolute;
-  top: 63rem;
-  left: 53rem;
-  width: 5rem;
-  transition: all .3s ease-in-out;
-}
-#react:hover {
-  transform: rotateY(90deg);
-  transform-style: preserve-3d;
-}
 #gsap {
   position: absolute;
   top: 71.25rem;
@@ -228,8 +223,8 @@ h1 {
 }
 #agile {
   position: absolute;
-  top: 65rem;
-  left: 56rem;
+  top: 61rem;
+  left: 53rem;
   width: 10rem;
   transition: all .6s ease-in-out;
 }
